Creating a pip reqs file

--- a/heatmap/index.html
+++ b/heatmap/index.html
@@ -26,7 +26,8 @@
     <script src="https://rawgit.com/LearnBoost/socket.io-client/master/socket.io.js"></script>
     <script>
 // Adding 500 Data Points
-var map, pointarray, heatmap;
+var map, pointArray, pointArrayNeg, heatmap;
+
 var data = [
   new google.maps.LatLng(37.782551, -122.445368),
   new google.maps.LatLng(37.782745, -122.444586),
