--- a/backend/index.html
+++ b/backend/index.html
@@ -1,8 +1,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
   var socket = io.connect('http://' + document.domain);
-  socket.on('news', function (data) {
+  socket.on('newPoint', function (data) {
     console.log(data);
-    socket.emit('my other event', { my: 'data' });
   });
 </script>
