Revert "Redirecting to heatmap"
This reverts commit 96215937bc58944122e674d24f18c41ee1492b44.

--- a/heatmap/index.html
+++ b/heatmap/index.html
@@ -25,9 +25,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
     <script src="https://rawgit.com/LearnBoost/socket.io-client/master/socket.io.js"></script>
     <script>
-
-var hostname = "ec2-54-187-28-208.us-west-2.compute.amazonaws.com";
-
+// Adding 500 Data Points
 var map, pointArray, pointArrayNeg, heatmap;
 
 var data = [
@@ -130,7 +128,7 @@ function initializeHeatmap() {
 }
 
 function initializeSocket() {
-    var socket = io.connect(hostname);
+    var socket = io.connect("http://localhost:1337");
     socket.on("newPoint", addPoint);
 }
 
