--- a/heatmap/index.html
+++ b/heatmap/index.html
@@ -28,100 +28,59 @@
 
 var hostname = "http://ec2-54-187-28-208.us-west-2.compute.amazonaws.com";
 
-var map, pointArray, pointArrayNeg, heatmap;
+var map, pointArray, pointArrayNeg, heatmap, heatmapNeg;
 
-var data = [
-  new google.maps.LatLng(37.782551, -122.445368),
-  new google.maps.LatLng(37.782745, -122.444586),
-  new google.maps.LatLng(37.782842, -122.443688),
-  new google.maps.LatLng(37.782919, -122.442815),
-  new google.maps.LatLng(37.782992, -122.442112),
-  new google.maps.LatLng(37.783100, -122.441461),
-  new google.maps.LatLng(37.783206, -122.440829),
-  new google.maps.LatLng(37.783273, -122.440324),
-  new google.maps.LatLng(37.783316, -122.440023),
-  new google.maps.LatLng(37.783357, -122.439794),
-  new google.maps.LatLng(37.783371, -122.439687),
-  new google.maps.LatLng(37.783368, -122.439666),
-  new google.maps.LatLng(37.783383, -122.439594),
-  new google.maps.LatLng(37.783508, -122.439525),
-  new google.maps.LatLng(37.783842, -122.439591),
-  new google.maps.LatLng(37.784147, -122.439668),
-  new google.maps.LatLng(37.784206, -122.439686),
-  new google.maps.LatLng(37.784386, -122.439790),
-  new google.maps.LatLng(37.784701, -122.439902),
-  new google.maps.LatLng(37.784965, -122.439938),
-  new google.maps.LatLng(37.785010, -122.439947),
-  new google.maps.LatLng(37.785360, -122.439952),
-  new google.maps.LatLng(37.785715, -122.440030),
-  new google.maps.LatLng(37.786117, -122.440119),
-  new google.maps.LatLng(37.786564, -122.440209),
-  new google.maps.LatLng(37.786905, -122.440270),
-];
+var data = [];
 
-var dataNeg = [
-  new google.maps.LatLng(37.800938, -122.434650),
-  new google.maps.LatLng(37.801024, -122.434889),
-  new google.maps.LatLng(37.800955, -122.435392),
-  new google.maps.LatLng(37.800886, -122.435959),
-  new google.maps.LatLng(37.800811, -122.436275),
-  new google.maps.LatLng(37.800788, -122.436299),
-  new google.maps.LatLng(37.800719, -122.436302),
-  new google.maps.LatLng(37.800702, -122.436298),
-  new google.maps.LatLng(37.800661, -122.436273),
-  new google.maps.LatLng(37.800395, -122.436172),
-  new google.maps.LatLng(37.800228, -122.436116),
-  new google.maps.LatLng(37.800169, -122.436130),
-  new google.maps.LatLng(37.800066, -122.436167),
-  new google.maps.LatLng(37.784345, -122.422922),
-  new google.maps.LatLng(37.784389, -122.422926),
-  new google.maps.LatLng(37.784437, -122.422924),
-  new google.maps.LatLng(37.784746, -122.422818),
-  new google.maps.LatLng(37.785436, -122.422959),
-  new google.maps.LatLng(37.786120, -122.423112),
-  new google.maps.LatLng(37.786433, -122.423029),
-  new google.maps.LatLng(37.786631, -122.421213),
-  new google.maps.LatLng(37.786660, -122.421033),
-  new google.maps.LatLng(37.786801, -122.420141),
-  new google.maps.LatLng(37.786823, -122.420034),
-];
+var dataNeg = [];
 
  
 function initializeHeatmap() {
   var mapOptions = {
-    zoom: 13,
-    center: new google.maps.LatLng(37.774546, -122.433523),
+    zoom: 5,
+    center: new google.maps.LatLng(41.850033, -87.6500523),
     mapTypeId: google.maps.MapTypeId.SATELLITE
   };
   map = new google.maps.Map(document.getElementById('map-canvas'),
       mapOptions);
   pointArray = new google.maps.MVCArray(data);
-  pointArrayNeg = new google.maps.MVCArray(dataNeg);
 
+  var gradientPos = [
+    'rgba(255,255,255,0)',
+    'rgba(235,229,255,0)',
+    'rgba(216,204,255,0)',
+    'rgba(197,178,255,1)',
+    'rgba(178,153,255,1)',
+    'rgba(159,127,255,1)',
+    'rgba(140,102,255,1)',
+    'rgba(121,76,255,1)',
+    'rgba(98,50,255,1)',
+    'rgba(101,50,255,1)',
+    'rgba(82,25,255,1)',
+    'rgba(63,0,255,1)'
+  ]
   heatmap = new google.maps.visualization.HeatmapLayer({
     data: pointArray
   });
-
+  heatmap.set('gradient', gradientPos);
   heatmap.setMap(map);
 
 
-  var gradientNeg = [
-    'rgba(0, 255, 255, 0)',
-    'rgba(0, 255, 255, 1)',
-    'rgba(0, 191, 255, 1)',
-    'rgba(0, 127, 255, 1)',
-    'rgba(0, 63, 255, 1)',
-    'rgba(0, 0, 255, 1)',
-    'rgba(0, 0, 223, 1)',
-    'rgba(0, 0, 191, 1)',
-    'rgba(0, 0, 159, 1)',
-    'rgba(0, 0, 127, 1)',
-    'rgba(63, 0, 91, 1)',
-    'rgba(127, 0, 63, 1)',
-    'rgba(191, 0, 31, 1)',
-    'rgba(255, 0, 0, 1)'
-  ]
+  pointArrayNeg = new google.maps.MVCArray(dataNeg);
 
+  var gradientNeg = [
+    'rgba(255,255,255,0)',
+    'rgba(255,229,229,0)',
+    'rgba(255,206,207,0)',
+    'rgba(255,178,179,1)',
+    'rgba(255,153,154,1)',
+    'rgba(255,127,129,1)',
+    'rgba(255,102,104,1)',
+    'rgba(255,76,79,1)',
+    'rgba(255,50,54,1)',
+    'rgba(255,25,29,1)',
+    'rgba(255,0,0,1)'
+  ]
   heatmapNeg = new google.maps.visualization.HeatmapLayer({
     data: pointArrayNeg
   });
@@ -149,36 +108,22 @@ function addPoint(data) {
 
 }
 
-function toggleHeatmap() {
+function toggleHeatmapPositive() {
   heatmap.setMap(heatmap.getMap() ? null : map);
 }
 
-function changeGradient() {
-  var gradient = [
-    'rgba(0, 255, 255, 0)',
-    'rgba(0, 255, 255, 1)',
-    'rgba(0, 191, 255, 1)',
-    'rgba(0, 127, 255, 1)',
-    'rgba(0, 63, 255, 1)',
-    'rgba(0, 0, 255, 1)',
-    'rgba(0, 0, 223, 1)',
-    'rgba(0, 0, 191, 1)',
-    'rgba(0, 0, 159, 1)',
-    'rgba(0, 0, 127, 1)',
-    'rgba(63, 0, 91, 1)',
-    'rgba(127, 0, 63, 1)',
-    'rgba(191, 0, 31, 1)',
-    'rgba(255, 0, 0, 1)'
-  ]
-  heatmap.set('gradient', heatmap.get('gradient') ? null : gradient);
+function toggleHeatmapNegative() {
+  heatmapNeg.setMap(heatmapNeg.getMap() ? null : map);
 }
 
-function changeRadius() {
-  heatmap.set('radius', heatmap.get('radius') ? null : 20);
+function changeRadiusLarger() {
+  heatmap.set('radius', heatmap.get('radius') ? null : 15);
+  heatmapNeg.set('radius', heatmapNeg.get('radius') ? null : 15);
 }
 
 function changeOpacity() {
-  heatmap.set('opacity', heatmap.get('opacity') ? null : 0.2);
+  heatmap.set('opacity', heatmap.get('opacity') ? null : 0.5);
+  heatmapNeg.set('opacity', heatmapNeg.get('opacity') ? null : 0.5);
 }
 
 google.maps.event.addDomListener(window, 'load', initializeHeatmap);
@@ -188,10 +133,10 @@ google.maps.event.addDomListener(window, 'load', initializeSocket);
   </head>
   <body>
     <div id="panel">
-      <button onclick="toggleHeatmap()">Toggle Heatmap</button>
-      <button onclick="changeGradient()">Change gradient</button>
-      <button onclick="changeRadius()">Change radius</button>
-      <button onclick="changeOpacity()">Change opacity</button>
+      <button onclick="toggleHeatmapPositive()">Toggle Positive</button>
+      <button onclick="toggleHeatmapNegative()">Toggle Negative</button>
+      <button onclick="changeRadiusLarger()">Larger Points</button>
+      <button onclick="changeOpacity()">Change Opacity</button>
     </div>
     <div id="map-canvas"></div>
   </body>
