Now passing timestamps and added moment.js

--- a/backend/public/html/index.html
+++ b/backend/public/html/index.html
@@ -90,6 +90,7 @@
 	<!-- Our javascript -->
     <script src="../javascript/allStates.js" type="text/javascript"></script>
     <script src="../javascript/site.js" type="text/javascript"></script>
+    <script src="../javascript/libraries/moment.min.js" type="text/javascript"></script>
 
     </body>
 </html>
