--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -26,6 +26,7 @@
     <script src="http://ec2-54-187-28-208.us-west-2.compute.amazonaws.com/socket.io/socket.io.js"></script>
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.5/src/markerwithlabel_packed.js"></script>
     <script src="allStates.js"></script>
+    <script src="moment.min.js"></script>
 
     <script>
 
