Topic List updates

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -15,12 +15,14 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><h3>Topics</h3></li>
-                <li><a>Topic 1</a> </li>
-                <li><a>Topic 2</a> </li>
-                <li><a>Topic 3</a> </li>
-                <li><a>Topic 4</a> </li>
-                <li><a>Topic 5</a> </li>
-                <li><a>Topic 6</a> </li>
+                <div class="sidebar-topic-all">
+                    <li class="sidebar-topic"><a>Topic 1</a> </li>
+                    <li class="sidebar-topic"><a>Topic 2</a> </li>
+                    <li class="sidebar-topic"><a>Topic 3</a> </li>
+                    <li class="sidebar-topic"><a>Topic 4</a> </li>
+                    <li class="sidebar-topic"><a>Topic 5</a> </li>
+                    <li class="sidebar-topic"><a>Topic 6</a> </li>
+                </div>
             </ul>
         </div>
 
