Added about us removed commented JSON line
About us isn’t formatted or done

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -55,6 +55,7 @@
         <li><a id="state_current_btn">State Current</a></li>
         <li><a id="larger_points_btn">Larger Points</a></li>
         <li><a id="change_opacity_btn">Change Opacity</a></li>
+        <li><a id="about_us_btn">About Us</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -76,9 +77,17 @@
 		</div>
 	    </div>
         </div>
-
     </div>
 
+    <div> This project was designed for CS 145: Projects in Networking at Caltech. <br> Our team consisted of: 
+    <ul>
+        <li>Aleksander Bello</li>
+        <li>Alex Cioc</li>
+        <li>Victor Duan</li>
+        <li>Archan Luhar</li>
+        <li>Louis O&#39;Bryan</li>
+    </ul>
+    We would like to thank Professor Adam Wierman for his advice and guidance. <div>
 
 	<!-- Libraries -->
     <!--<script src="javascript/libraries/google-map.js"></script>-->
