--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/libraries/jquery-ui-1.10.4.custom.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/site.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png">
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 
@@ -92,7 +93,6 @@
 	<!-- Libraries -->
     <!--<script src="javascript/libraries/google-map.js"></script>-->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
-    <script src="javascript/libraries/socket.io.min.js" type="text/javascript"></script>
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.5/src/markerwithlabel_packed.js"></script>
     <script src="javascript/libraries/jquery-2.0.3.min.js" type="text/javascript"></script>
     <script src="javascript/libraries/bootstrap.min.js" type="text/javascript"></script>
