trending topics now loading and not console logging

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -17,12 +17,16 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><h3>Topics</h3></li>
                 <div class="sidebar-topic-all">
-                    <li class="sidebar-topic"><a>Topic 1</a> </li>
-                    <li class="sidebar-topic"><a>Topic 2</a> </li>
-                    <li class="sidebar-topic"><a>Topic 3</a> </li>
-                    <li class="sidebar-topic"><a>Topic 4</a> </li>
-                    <li class="sidebar-topic"><a>Topic 5</a> </li>
-                    <li class="sidebar-topic"><a>Topic 6</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
+                    <li class="sidebar-topic"><a>Loading...</a> </li>
                 </div>
             </ul>
         </div>
