--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,111 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>The Tweet Rises: Heatmap of Twitter Tweets</title>
-	<link rel="stylesheet" type="text/css" href="css/libraries/bootstrap.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/libraries/jquery-ui-1.10.4.custom.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/site.css" />
-	<link rel="icon" type="image/png" href="images/favicon.png">
+    <title>The Tweet Rises: Heatmap of Twitter Tweets</title>
+    <link rel="stylesheet" type="text/css" href="css/libraries/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/libraries/jquery-ui-1.10.4.custom.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/site.css" />
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+<div id="wrapper">
+    <!-- Main content -->
+    <div id="page-content-wrapper">
 
-    <div id="wrapper">
+        <nav class="navbar site-navigation" role="navigation">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/">The Tweet Rises</a>
 
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand"><h3>Topics</h3></li>
-                <div class="sidebar-topic-all">
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                    <li class="sidebar-topic"><a>Loading...</a> </li>
-                </div>
-            </ul>
-        </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li><a id="standard_heatmap_btn" href="#">Standard Heatmap</a></li>
+                <li><a id="state_average_btn" href="#">State Averages</a></li>
+                <li><a id="state_current_btn" href="#">State Current</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Topics <span class="badge">42</span> <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a id="default-map-link" href="#">None (default)</a></li>
 
-        <!-- Page content -->
-        <div id="page-content-wrapper">
+                        <li class="divider"></li>
 
-<nav class="navbar" role="navigation" style="border-radius:0px;margin-bottom:0px;">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">The Tweet Rises</a>
-    </div>
-  </div><!-- /.container-fluid -->
-</nav>
+                        <li class="loading-topics"><a href="#">Loading...</a></li>
+                    </ul>
+                </li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
 
-<nav class="navbar" role="navigation" style="border-radius:0px;border-top:1px solid #efefef;border-bottom:1px solid #efefef;margin-bottom:0px;">
-  <div class="container-fluid" style="padding-left:0px;">
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" style="padding-left:0px;">
-      <ul class="nav navbar-nav">
-        <li><a id="standard_heatmap_btn">Standard Heatmap</a></li>
-        <li><a id="state_average_btn">State Averages</a></li>
-        <li><a id="state_current_btn">State Current</a></li>
-        <li><a id="larger_points_btn">Larger Points</a></li>
-        <li><a id="change_opacity_btn">Change Opacity</a></li>
-        <li><a id="about_us_btn">About Us</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-            <div class="page-content">
-	    	<div style="display:table;width:100%;height:100%;">
-		<div style="display:table-row;">
-		<div id="map-canvas" style="width:100%;height:100%;min-height:100px;"></div> 
-		</div>
-		<div style="display:table-row;height:60px;">
-		<div id="slider_holder" style="padding:10px 15px;">
-			<div style="display:table;width:100%;">
-				<div style="display:table-cell;text-align:left;padding-left:20px;width:50%;" id="slider_time_left">2 hours 0 minutes ago</div>
-				<div style="display:table-cell;text-align:right;padding-right:20px;width:50%;" id="slider_time_right">0 minutes ago</div>
-			</div>
-			<div id="time_slider"></div>
-		</div>
-		</div>
-	    </div>
+        <div class="page-content">
+            <div id="map-canvas-wrapper">
+                <button id="fullscreen-button" type="button" class="btn btn-primary btn-xs">Fullscreen</button>
+                <div id="map-canvas"></div>
+            </div>
         </div>
     </div>
 
-    <div> This project was designed for CS 145: Projects in Networking at Caltech. <br> Our team consisted of: 
-    <ul>
-        <li>Aleksander Bello</li>
-        <li>Alex Cioc</li>
-        <li>Victor Duan</li>
-        <li>Archan Luhar</li>
-        <li>Louis O&#39;Bryan</li>
-    </ul>
-    We would like to thank Professor Adam Wierman for his advice and guidance. <div>
+    <div id="about" class="panel panel-info">
+        <div class="panel-heading">About</div>
+        <div class="panel-body">
+            This <a href="https://github.com/archanl/thetweetrises">project</a> originated from a class at the <a href="http://www.caltech.edu/">California Institute of Technology</a> called CS 145: Projects in Networking. It was developed by Aleksander Bello, Alex Cioc, Victor Duan, Archan Luhar, and Louis O&#39;Bryan. We would like to thank Professor <a href="http://users.cms.caltech.edu/~adamw/">Adam Wierman</a> for his advice and guidance.
+        </div>
+    </div>
+</div>
 
-	<!-- Libraries -->
-    <!--<script src="javascript/libraries/google-map.js"></script>-->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
-    <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.5/src/markerwithlabel_packed.js"></script>
-    <script src="javascript/libraries/jquery-2.0.3.min.js" type="text/javascript"></script>
-    <script src="javascript/libraries/bootstrap.min.js" type="text/javascript"></script>
-    <script src="javascript/libraries/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+<!-- Libraries -->
+<!--<script src="javascript/libraries/google-map.js"></script>-->
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
+<script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.5/src/markerwithlabel_packed.js"></script>
+<script src="javascript/libraries/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script src="javascript/libraries/bootstrap.min.js" type="text/javascript"></script>
+<script src="javascript/libraries/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 
-	<!-- Our javascript -->
-    <script src="javascript/allStates.js" type="text/javascript"></script>
-    <script src="javascript/site.js" type="text/javascript"></script>
-    <script src="javascript/libraries/moment.min.js" type="text/javascript"></script>
+<!-- Our javascript -->
+<script src="javascript/allStates.js" type="text/javascript"></script>
+<script src="javascript/site.js" type="text/javascript"></script>
+<script src="javascript/libraries/moment.min.js" type="text/javascript"></script>
 
-    </body>
+</body>
 </html>
