fixed garbage collector, added rate text

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/libraries/jquery-ui-1.10.4.custom.min.css" />
     <link rel="stylesheet" type="text/css" href="css/site.css" />
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://162.243.150.138/socket.io/socket.io.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -42,6 +42,7 @@
             <div id="map-canvas-wrapper">
                 <button id="fullscreen-button" type="button" class="btn btn-primary btn-xs">Fullscreen</button>
                 <div id="map-canvas"></div>
+                <div id="rateText"></div>
             </div>
         </div>
     </div>
