added channel switching topics

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -23,14 +23,23 @@
                 <li><a id="standard_heatmap_btn" href="#">Standard Heatmap</a></li>
                 <li><a id="state_average_btn" href="#">State Averages</a></li>
                 <li><a id="state_current_btn" href="#">State Current</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Topics <span class="badge">42</span> <b class="caret"></b></a>
+                <li id="topics-dropdown" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Topics <span id="new-topics-badge" class="badge"></span> <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a id="default-map-link" href="#">None (default)</a></li>
+                        <li><a id="default-map-link" class="channelLink selected-channel" href="#">None (default)</a></li>
 
                         <li class="divider"></li>
 
-                        <li class="loading-topics"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
+                        <li class="topic-channel"><a href="#">Loading...</a></li>
                     </ul>
                 </li>
               </ul>
