ui code added for new topics coming in via the stream the new method (without 'trending' message

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -25,21 +25,11 @@
                 <li><a id="state_current_btn" href="#">State Current</a></li>
                 <li id="topics-dropdown" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Topics <span id="new-topics-badge" class="badge"></span> <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
+                    <ul id="topic-menu" class="dropdown-menu">
                         <li><a id="default-map-link" class="channelLink selected-channel" href="#">None (default)</a></li>
 
                         <li class="divider"></li>
 
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
-                        <li class="topic-channel"><a href="#">Loading...</a></li>
                     </ul>
                 </li>
               </ul>
