cleaned site.js and added error message if no connection

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -38,6 +38,7 @@
         </nav>
 
         <div class="page-content">
+            <div id="error-messages"></div>
             <div id="map-canvas-wrapper">
                 <button id="fullscreen-button" type="button" class="btn btn-primary btn-xs">Fullscreen</button>
                 <div id="map-canvas"></div>
