--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -20,16 +20,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><a id="standard_heatmap_btn" href="#">Standard Heatmap</a></li>
-                <li><a id="state_average_btn" href="#">State Averages</a></li>
-                <li><a id="state_current_btn" href="#">State Current</a></li>
+                <li><a id="states-mode-btn" href="#">States</a></li>
+                <li><a id="heatmap-mode-btn" href="#">Heatmap</a></li>
+
                 <li id="topics-dropdown" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Topics <span id="new-topics-badge" class="badge"></span> <b class="caret"></b></a>
+
                     <ul id="topic-menu" class="dropdown-menu">
                         <li><a id="default-map-link" class="channelLink selected-channel" href="#">None (default)</a></li>
-
                         <li class="divider"></li>
-
                     </ul>
                 </li>
               </ul>
@@ -56,17 +55,19 @@
 </div>
 
 <!-- Libraries -->
-<!--<script src="javascript/libraries/google-map.js"></script>-->
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
 <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.5/src/markerwithlabel_packed.js"></script>
 <script src="javascript/libraries/jquery-2.0.3.min.js" type="text/javascript"></script>
 <script src="javascript/libraries/bootstrap.min.js" type="text/javascript"></script>
 <script src="javascript/libraries/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+<script src="javascript/libraries/moment.min.js" type="text/javascript"></script>
+<script src="javascript/libraries/underscore-min.js" type="text/javascript"></script>
 
 <!-- Our javascript -->
-<script src="javascript/allStates.js" type="text/javascript"></script>
+<!-- <script src="javascript/allStates.js" type="text/javascript"></script> -->
+<script src="javascript/heatmap.js" type="text/javascript"></script>
+<script src="javascript/app.js" type="text/javascript"></script>
 <script src="javascript/site.js" type="text/javascript"></script>
-<script src="javascript/libraries/moment.min.js" type="text/javascript"></script>
 
 </body>
 </html>
