--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -64,7 +64,7 @@
 <script src="javascript/libraries/underscore-min.js" type="text/javascript"></script>
 
 <!-- Our javascript -->
-<!-- <script src="javascript/allStates.js" type="text/javascript"></script> -->
+<script src="javascript/allStates.js" type="text/javascript"></script>
 <script src="javascript/heatmap.js" type="text/javascript"></script>
 <script src="javascript/app.js" type="text/javascript"></script>
 <script src="javascript/site.js" type="text/javascript"></script>
