--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
     <title>The Tweet Rises: Heatmap of Twitter Tweets</title>
+
     <link rel="stylesheet" type="text/css" href="css/libraries/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/libraries/jquery-ui-1.10.4.custom.min.css" />
     <link rel="stylesheet" type="text/css" href="css/site.css" />
+
     <link rel="icon" type="image/png" href="images/favicon.png">
+
+    <!-- Libraries -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp?sensor=false&libraries=geometry,visualization,drawing"></script>
+    <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.5/src/markerwithlabel_packed.js"></script>
+    <script src="javascript/libraries/jquery-2.0.3.min.js" type="text/javascript"></script>
+    <script src="javascript/libraries/bootstrap.min.js" type="text/javascript"></script>
+    <script src="javascript/libraries/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+    <script src="javascript/libraries/moment.min.js" type="text/javascript"></script>
+    <script src="javascript/libraries/underscore-min.js" type="text/javascript"></script>
+
+    <!-- Our javascript -->
+    <script src="javascript/allStates.js" type="text/javascript"></script>
+    <script src="javascript/heatmap.js" type="text/javascript"></script>
+    <script src="javascript/app.js" type="text/javascript"></script>
+
+    <!-- Socket -->
     <script src="http://162.243.150.138/socket.io/socket.io.js"></script>
 </head>
 <body>
@@ -53,19 +71,7 @@
     </div>
 </div>
 
-<!-- Libraries -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
-<script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.5/src/markerwithlabel_packed.js"></script>
-<script src="javascript/libraries/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="javascript/libraries/bootstrap.min.js" type="text/javascript"></script>
-<script src="javascript/libraries/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
-<script src="javascript/libraries/moment.min.js" type="text/javascript"></script>
-<script src="javascript/libraries/underscore-min.js" type="text/javascript"></script>
-
-<!-- Our javascript -->
-<script src="javascript/allStates.js" type="text/javascript"></script>
-<script src="javascript/heatmap.js" type="text/javascript"></script>
-<script src="javascript/app.js" type="text/javascript"></script>
+<!-- Site javascript; begin execution. -->
 <script src="javascript/site.js" type="text/javascript"></script>
 
 </body>
