default to states map and add visual key to see which map is selected

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -38,7 +38,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><a id="states-mode-btn" href="#">States</a></li>
+                <li><a id="states-mode-btn" class="selected-map-view" href="#">States</a></li>
                 <li><a id="heatmap-mode-btn" href="#">Heatmap</a></li>
 
                 <li id="topics-dropdown" class="dropdown">
