limited height of topics list and added topic click disabling

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>The Tweet Rises: Heatmap of Twitter Tweets</title>
+    <title>The Tweet Rises: Mapping Twitter Sentiment</title>
 
     <link rel="stylesheet" type="text/css" href="css/libraries/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/libraries/jquery-ui-1.10.4.custom.min.css" />
@@ -38,8 +38,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><a id="states-mode-btn" class="selected-map-view" href="#">States</a></li>
-                <li><a id="heatmap-mode-btn" href="#">Heatmap</a></li>
+                <li><a id="states-mode-btn" class="selected-map-view" href="#">States<span class="topic-title"></span></a></li>
+                <li><a id="heatmap-mode-btn" href="#">Heatmap<span class="topic-title"></span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
