--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <title>The Tweet Rises</title>
+<meta http-equiv="refresh" content="0; url=http://162.243.150.138/" />
 </head>
 <body>
 <h1>The Tweet Rises</h1>
-<p>Hello world!</p>
+<p>You should be redirect to the <a href="http://162.243.150.138/" title="The Tweet Rises application website">application</a>...</p>
 </body>
 </html>
